Finish file download function

--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -44,9 +44,9 @@
             android:layout_toRightOf="@id/itemListFile_icon"
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:padding="5dp"
-            android:layout_marginLeft="2dp"
+            android:layout_margin="5dp"
             android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="match_parent"
                 android:textSize="@dimen/textTitle"
@@ -54,30 +54,28 @@
                 android:text="@{meta.getName(true)}"
                 android:textColor="@color/textTitle"
                 android:layout_height="wrap_content"/>
-           <LinearLayout
-               android:orientation="vertical"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
-               <LinearLayout
-                   android:orientation="horizontal"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content">
-                   <TextView
-                       style="@style/titleSmallTextView"
-                       android:text="@{meta.directory?`(`+(meta.childCount)+`)`:(meta.extension??``)}"/>
-                   <TextView
-                       style="@style/titleSmallTextView"
-                       android:text="@{Time.formatTime((long)meta.modifyTime)}"/>
-                   <TextView
-                       style="@style/titleSmallTextView"
-                       android:text="@{``+meta.permission()}"/>
-               </LinearLayout>
-               <View
-                   android:background="#0f0"
-                   android:alpha="0.4"
-                   android:layout_width="match_parent"
-                   android:layout_height="1dp"/>
-           </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <View
+                    android:background="#0f0"
+                    android:layout_width="1dp"
+                    android:visibility="@{meta instanceof LocalFile?View.VISIBLE:View.GONE}"
+                    android:alpha="0.4"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    style="@style/titleSmallTextView"
+                    android:text="@{meta.directory?`(`+(meta.childCount)+`)`:(meta.extension??``)}"/>
+                <TextView
+                    style="@style/titleSmallTextView"
+                    android:text="@{Time.formatTime((long)meta.modifyTime)}"/>
+                <TextView
+                    style="@style/titleSmallTextView"
+                    android:text="@{``+meta.permission()}"/>
+            </LinearLayout>
         </LinearLayout>
         <CheckBox
             android:id="@+id/itemListFile_selectCB"
