--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="textFocus">#999999</color>
     <color name="textTitle">#ffffff</color>
     <color name="textTitleSub">#ffffff</color>
+    <color name="synced">#0f0</color>
+    <color name="syncNull">#0000</color>
+    <color name="syncNone">#00f</color>
 </resources>
