--- a/app/src/main/res/layout/file_context_menu.xml
+++ b/app/src/main/res/layout/file_context_menu.xml
@@ -23,6 +23,9 @@
             android:visibility="@{file instanceof LocalFile?View.GONE:View.VISIBLE}"
             binding:menu="@{ContextMenu.create(R.string.download,file)}"/>
         <include layout="@layout/item_context_menu"
+            android:visibility="@{(!file.directory&amp;&amp;file instanceof LocalFile)?View.VISIBLE:View.GONE}"
+            binding:menu="@{ContextMenu.create(R.string.sync,file)}"/>
+        <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.move,file)}"/>
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.copy,file)}"/>
