--- a/app/src/main/res/layout/file_detail.xml
+++ b/app/src/main/res/layout/file_detail.xml
@@ -40,7 +40,7 @@
             <include binding:key="@{R.string.size}" binding:value="@{file.childCount>=0?``+file.childCount:FileSize.formatSizeText(file.length)}" layout="@layout/item_key_value"/>
             <include binding:key="@{R.string.format}" binding:value="@{file.directory?(Integer)R.string.folder:(file.mime??file.extension)}" layout="@layout/item_key_value"/>
             <include binding:key="@{R.string.type}" binding:value="@{FileType.formatType(file.mode)}" layout="@layout/item_key_value"/>
-            <include binding:key="@{R.string.path}" binding:value="@{file.path}" layout="@layout/item_key_value"/>
+            <include binding:key="@{R.string.path}" binding:value="@{file.getPath(false)}" layout="@layout/item_key_value"/>
             <include binding:key="@{R.string.modifyTime}" binding:value="@{Time.formatTime((long)file.modifyTime)}" layout="@layout/item_key_value"/>
             <include android:visibility="@{What.WHAT_INVALID!=loadState?View.GONE:View.VISIBLE}" layout="@layout/loading" binding:message="@{`加载中`}" />
             <LinearLayout
