--- a/app/src/main/res/layout/local_file_detail.xml
+++ b/app/src/main/res/layout/local_file_detail.xml
@@ -57,7 +57,8 @@
             <include binding:key="@{R.string.permission}" binding:value="@{(file.canWrite()?`w`:``)+(file.canRead()?`r`:``)+(file.canExecute()?`x`:``)}" layout="@layout/item_key_value"/>
             <include binding:key="@{R.string.size}" binding:value="@{FileSize.formatSizeText(file.length())}" layout="@layout/item_key_value"/>
             <include binding:key="@{R.string.accessTime}" binding:value="@{Time.formatTime(file.lastModified)}" layout="@layout/item_key_value"/>
-<!--            <include binding:key="@{R.string.size}" binding:value="@{client.account}"  android:visibility="@{null==client.account?View.GONE:View.VISIBLE}" layout="@layout/item_key_value"/>-->
+<!--            <include binding:key="@{R.string.sync}" binding:value="@{file?R.string.folder:R.string.file}" layout="@layout/item_key_value"/>-->
+            <!--            <include binding:key="@{R.string.size}" binding:value="@{client.account}"  android:visibility="@{null==client.account?View.GONE:View.VISIBLE}" layout="@layout/item_key_value"/>-->
 <!--            <include binding:key="@{R.string.modifyTime}" binding:value="@{client.deviceType}"  android:visibility="@{null==client.deviceType?View.GONE:View.VISIBLE}" layout="@layout/item_key_value"/>-->
         </LinearLayout>
     </ScrollView>
