--- a/app/src/main/res/layout/file_browser_menu.xml
+++ b/app/src/main/res/layout/file_browser_menu.xml
@@ -8,8 +8,12 @@
             name="folder"
             type="com.merlin.bean.FolderData" />
         <variable
+            name="mode"
+            type="Integer" />
+        <variable
             name="client"
             type="com.merlin.bean.ClientMeta" />
+        <import type="com.merlin.browser.Mode"/>
         <import type="android.view.View"/>
         <import type="com.merlin.bean.LocalFolder"/>
     </data>
@@ -18,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include layout="@layout/item_context_menu"
+            android:visibility="@{(mode==Mode.MODE_NORMAL)?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.transportList,folder)}"/>
 <!--        <include layout="@layout/item_context_menu"-->
 <!--            android:visibility="@{folder instanceof LocalFolder&amp;&amp;((LocalFolder)folder).file.?View.VISIBLE:View.GONE}"-->
