--- a/app/src/main/res/layout/layout_file_modify.xml
+++ b/app/src/main/res/layout/layout_file_modify.xml
@@ -10,11 +10,12 @@
             type="String" />
         <import type="android.view.View"/>
     </data>
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ProgressBar
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <LinearLayout
@@ -34,5 +35,5 @@
                 android:layout_weight="1"
                 style="@style/titleSubNormalTextView"/>
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
