--- a/app/src/main/res/layout/item_browser_bottom_menu.xml
+++ b/app/src/main/res/layout/item_browser_bottom_menu.xml
@@ -9,15 +9,16 @@
     </data>
     <TextView
         android:background="@drawable/selector_round_dark_corner_small"
-        android:layout_marginBottom="1dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="10dp"
         binding:enableClick="@{Clicker.click(Clicker.SINGLE_TAP_MASK|Clicker.SINGLE_LONG_CLICK_MASK,menu.arg,true)}"
-        android:minWidth="150dp"
-        android:minHeight="20dp"
         android:text="@{menu.text}"
+        android:minWidth="83dp"
+        android:minHeight="40dp"
+        android:padding="5dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
         android:textSize="@dimen/textTitle"
         android:textColor="@color/textTitle"
         android:textStyle="bold"/>
