--- a/app/src/main/res/layout/file_browser_menu.xml
+++ b/app/src/main/res/layout/file_browser_menu.xml
@@ -25,6 +25,9 @@
             android:visibility="@{(mode==Mode.MODE_NORMAL)?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.transportList,folder)}"/>
         <include layout="@layout/item_context_menu"
+            android:visibility="@{folder.length>0?View.VISIBLE:View.GONE}"
+            binding:menu="@{ContextMenu.create(R.string.multiChoose,folder)}"/>
+        <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.goTo,folder)}"/>
 <!--        <include layout="@layout/item_context_menu"-->
 <!--            android:visibility="@{folder instanceof LocalFolder&amp;&amp;((LocalFolder)folder).file.?View.VISIBLE:View.GONE}"-->
