--- a/app/src/main/res/layout/file_context_menu.xml
+++ b/app/src/main/res/layout/file_context_menu.xml
@@ -5,6 +5,10 @@
         <variable
             name="file"
             type="com.merlin.bean.FileMeta" />
+        <variable
+            name="mode"
+            type="int" />
+        <import type="com.merlin.browser.Mode"/>
         <import type="com.merlin.view.ContextMenu"/>
         <import type="android.view.View"/>
         <import type="com.merlin.client.R"/>
@@ -17,14 +21,15 @@
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.open,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile?View.VISIBLE:View.GONE}"
+            android:visibility="@{file instanceof LocalFile&amp;&amp;mode!=Mode.MODE_MULTI_CHOOSE?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.upload,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile?View.GONE:View.VISIBLE}"
+            android:visibility="@{file instanceof LocalFile||mode==Mode.MODE_MULTI_CHOOSE?View.GONE:View.VISIBLE}"
             binding:menu="@{ContextMenu.create(R.string.download,file)}"/>
 <!--        <include layout="@layout/item_context_menu"-->
 <!--            android:visibility="@{(!file.directory&amp;&amp;file instanceof LocalFile)?View.VISIBLE:View.GONE}"-->
 <!--            binding:menu="@{ContextMenu.create(R.string.sync,file)}"/>-->
+<!--        android:visibility="@{mode==Mode.MODE_MULTI_CHOOSE?View.GONE:View.VISIBLE}"-->
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.move,file)}"/>
         <include layout="@layout/item_context_menu"
