--- a/app/src/main/res/layout/layout_file_modify.xml
+++ b/app/src/main/res/layout/layout_file_modify.xml
@@ -21,16 +21,17 @@
             android:layout_height="wrap_content"/>
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_weight="1">
                 <TextView
                     android:lines="2"
+                    android:gravity="center"
                     android:text="@{left.name}"
                     android:textStyle="bold"
                     style="@style/titleSubNormalTextView"/>
