--- a/app/src/main/res/layout/file_browser_menu.xml
+++ b/app/src/main/res/layout/file_browser_menu.xml
@@ -42,6 +42,8 @@
             android:visibility="@{null!=folder?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.createFile,folder)}"/>
         <include layout="@layout/item_context_menu"
+            binding:menu="@{ContextMenu.create(R.string.exit,folder)}"/>
+        <include layout="@layout/item_context_menu"
             android:visibility="@{client.localClient?View.GONE:View.VISIBLE}"
             binding:menu="@{ContextMenu.create(R.string.reboot,folder)}"/>
     </LinearLayout>
