--- a/app/src/main/res/layout/file_context_menu.xml
+++ b/app/src/main/res/layout/file_context_menu.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="file"
-            type="com.merlin.bean.FileMeta" />
+            type="com.merlin.bean.Document" />
         <variable
             name="mode"
             type="int" />
